# T001

./: .gitignore  AGENT.md  README.md  extended_plan.md  pyproject.toml  strict_action_plan.md  super_plan.md  super_report.md
archive/: archive_summary.json  epoch_pairs.parquet  epoch_pairs_hst_only.parquet  observation_matrix.parquet  pixel_pair_queue.parquet
candidate_packets/6dF_J0245599-073443_hst_11575_02_acs_wfc_f814w_jb4u02_hst_14226_01_acs_wfc_f814w_jcuc01_0002/: summary.json
candidate_packets/6dF_J0245599-073443_hst_11575_02_acs_wfc_f814w_jb4u02_hst_14226_01_acs_wfc_f814w_jcuc01_0061/: summary.json
candidates/: candidate_ledger.csv  candidate_ledger.parquet  candidate_summary.json  detection_queue.csv  detection_queue.parquet  pixel_pair_summary.csv  pixel_pair_summary.parquet  review_queue.csv  source_measurements.parquet
catalogs/: galaxy_aliases.parquet  galaxy_master.parquet  galaxy_scores.parquet  galaxy_selection_summary.json
closure/: closure_all_features.csv  closure_all_features.parquet  closure_classification.csv  closure_classification.parquet  closure_manifest.json  closure_method.md  closure_report.md  closure_summary.json
extensions/: manifest.json
outputs/: benchmark_center_smoke_pair.parquet  diff_harden_smoke_subset.parquet
predictaroni/: candidate_scoring_spec.md  mega_prompt.txt  next_actions.md  prediction_whitepaper.aux  prediction_whitepaper.out  prediction_whitepaper.tex  test_matrix.md
sed/: followup_index.csv  followup_summary.json
src/supernova_pipeline/: cli.py  (+14 more)
tests/: test_branch_scoring.py  test_uber_nova_site.py
(+7424 files in other folders)
